--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -43,4 +43,4 @@ As this project grows, I will showcase sponsors' logos and links in this section
 Feel free to reach out to me on [LinkedIn](https://www.linkedin.com/in/anamarjanica/).
 
 ## License
-[MIT](./LICENSE-MIT) © [Eisberg Labs](http://www.eisberg-labs.com)
+[MIT](https://github.com/eisberg-labs/pagedigest/blob/main/LICENSE-MIT.md) © [Eisberg Labs](http://www.eisberg-labs.com)
